# learning_arm_sve2

./: CMakeLists.txt  Dockerfile.arm64.v8.qemu.sve2  README.md  build_android_ndk.sh  c_neon_sve.cpp
build_script/: build_armie.sh  build_qemu.sh
dockerfile/: Dockerfile.arm64.v8.qemu.sve2  Dockerfile.x86.qemu.sve2  README.md
sve_programming/: CMakeLists.txt  hist.cpp  hist.h  hist_test.cpp  sv_print.cpp  sv_print.hpp  test01.cpp
